--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 5 5 1 4 2 3 0] [0 0 0 0 0 1] 6\n"
+      "[5 5 5 2 4 1 3 0] [0 0 0 0 0 1] 6\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "<!-- 3 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>3</title>\n",
-       "<ellipse fill=\"#98f5ff\" stroke=\"#98f5ff\" cx=\"272\" cy=\"-294\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"darkslategrey\" stroke=\"darkslategrey\" cx=\"272\" cy=\"-294\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"272\" y=\"-290.3\" font-family=\"Times,serif\" font-size=\"14.00\">3</text>\n",
        "</g>\n",
        "<!-- 3&#45;&gt;1 -->\n",
@@ -147,7 +147,7 @@
        "<!-- 5 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
        "<title>5</title>\n",
-       "<ellipse fill=\"darkslategrey\" stroke=\"darkslategrey\" cx=\"441\" cy=\"-202\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"#98f5ff\" stroke=\"#98f5ff\" cx=\"441\" cy=\"-202\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"441\" y=\"-198.3\" font-family=\"Times,serif\" font-size=\"14.00\">5</text>\n",
        "</g>\n",
        "<!-- 3&#45;&gt;5 -->\n",
@@ -235,10 +235,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f1519dbf0e0>"
+       "<graphviz.graphs.Digraph at 0x7f49806a7530>"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,8 +323,8 @@
      "text": [
       "Component members:\n",
       "Component 0 = A: [7]\n",
-      "Component 1 = B: [3]\n",
-      "Component 2 = C: [5]\n",
+      "Component 1 = B: [5]\n",
+      "Component 2 = C: [3]\n",
       "Component 3 = D: [6]\n",
       "Component 4 = E: [4]\n",
       "Component 5 = F: [0, 1, 2]\n",
@@ -332,9 +332,9 @@
       "\n",
       "Index by state action:\n",
       " (from_component, q_action = original dtmc action code) <-> q_code\n",
-      "(B, 3) <-> 0\n",
+      "(C, 3) <-> 0\n",
       "(E, 4) <-> 1\n",
-      "(C, 5) <-> 2\n",
+      "(B, 5) <-> 2\n",
       "(D, 6) <-> 3\n",
       "(A, 7) <-> 4\n",
       "(F, 8) <-> 5\n",
@@ -355,43 +355,43 @@
        " viewBox=\"0.00 0.00 566.12 704.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 700)\">\n",
        "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-700 562.12,-700 562.12,4 -4,4\"/>\n",
-       "<!-- 1 -->\n",
+       "<!-- 2 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>1</title>\n",
+       "<title>2</title>\n",
        "<ellipse fill=\"pink\" stroke=\"pink\" cx=\"27\" cy=\"-678\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27\" y=\"-674.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-674.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
        "</g>\n",
-       "<!-- 1&#45;3 -->\n",
+       "<!-- 2&#45;3 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>1&#45;3</title>\n",
+       "<title>2&#45;3</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"97,-623 43,-623 43,-587 97,-587 97,-623\"/>\n",
        "<text text-anchor=\"middle\" x=\"70\" y=\"-600.6\" font-family=\"Times,serif\" font-size=\"18.00\">3</text>\n",
        "</g>\n",
-       "<!-- 1&#45;&gt;1&#45;3 -->\n",
+       "<!-- 2&#45;&gt;2&#45;3 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>1&#45;&gt;1&#45;3</title>\n",
+       "<title>2&#45;&gt;2&#45;3</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M36.76,-660.89C43.6,-649.6 52.72,-634.53 59.68,-623.04\"/>\n",
        "</g>\n",
-       "<!-- 2 -->\n",
+       "<!-- 1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>2</title>\n",
+       "<title>1</title>\n",
        "<ellipse fill=\"pink\" stroke=\"pink\" cx=\"163\" cy=\"-513\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"163\" y=\"-509.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
+       "<text text-anchor=\"middle\" x=\"163\" y=\"-509.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
        "</g>\n",
-       "<!-- 2&#45;5 -->\n",
+       "<!-- 1&#45;5 -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>2&#45;5</title>\n",
+       "<title>1&#45;5</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"190,-458 136,-458 136,-422 190,-422 190,-458\"/>\n",
        "<text text-anchor=\"middle\" x=\"163\" y=\"-435.6\" font-family=\"Times,serif\" font-size=\"18.00\">5</text>\n",
        "</g>\n",
-       "<!-- 2&#45;&gt;2&#45;5 -->\n",
+       "<!-- 1&#45;&gt;1&#45;5 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>2&#45;&gt;2&#45;5</title>\n",
+       "<title>1&#45;&gt;1&#45;5</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M163,-494.81C163,-483.65 163,-469.16 163,-458.03\"/>\n",
        "</g>\n",
-       "<!-- 1&#45;3&#45;&gt;2 -->\n",
+       "<!-- 2&#45;3&#45;&gt;1 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>1&#45;3&#45;&gt;2</title>\n",
+       "<title>2&#45;3&#45;&gt;1</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M73.79,-586.88C77.15,-575.04 83.11,-559.59 93,-549 102.91,-538.4 116.73,-530.55 129.47,-525.01\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"130.96,-528.18 138.93,-521.21 128.35,-521.69 130.96,-528.18\"/>\n",
        "<text text-anchor=\"middle\" x=\"158\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.3333333333</text>\n",
@@ -402,9 +402,9 @@
        "<ellipse fill=\"lightblue\" stroke=\"lightblue\" cx=\"92\" cy=\"-183\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"92\" y=\"-179.3\" font-family=\"Times,serif\" font-size=\"14.00\">F</text>\n",
        "</g>\n",
-       "<!-- 1&#45;3&#45;&gt;5 -->\n",
+       "<!-- 2&#45;3&#45;&gt;5 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>1&#45;3&#45;&gt;5</title>\n",
+       "<title>2&#45;3&#45;&gt;5</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M66.64,-586.82C63.4,-568.77 59,-539.5 59,-514 59,-514 59,-514 59,-274 59,-250.97 68.64,-226.54 77.5,-208.96\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.69,-210.42 82.28,-199.94 74.5,-207.14 80.69,-210.42\"/>\n",
        "<text text-anchor=\"middle\" x=\"124\" y=\"-389.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.6666666667</text>\n",
@@ -468,16 +468,16 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"180.5,-211.3 177,-201.3 173.5,-211.3 180.5,-211.3\"/>\n",
        "<text text-anchor=\"middle\" x=\"191.5\" y=\"-224.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
        "</g>\n",
-       "<!-- 2&#45;5&#45;&gt;1 -->\n",
+       "<!-- 1&#45;5&#45;&gt;2 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>2&#45;5&#45;&gt;1</title>\n",
+       "<title>1&#45;5&#45;&gt;2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M135.98,-451.61C100.87,-467.06 41.1,-499.41 16,-549 -0.26,-581.12 8.35,-623.61 16.94,-650.63\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"13.65,-651.83 20.18,-660.18 20.28,-649.58 13.65,-651.83\"/>\n",
        "<text text-anchor=\"middle\" x=\"30.5\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
        "</g>\n",
-       "<!-- 2&#45;5&#45;&gt;4 -->\n",
+       "<!-- 1&#45;5&#45;&gt;4 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>2&#45;5&#45;&gt;4</title>\n",
+       "<title>1&#45;5&#45;&gt;4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M177.74,-421.86C182.03,-416.38 186.5,-410.13 190,-404 195.09,-395.08 199.56,-384.75 203.12,-375.47\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"206.46,-376.51 206.6,-365.92 199.88,-374.11 206.46,-376.51\"/>\n",
        "<text text-anchor=\"middle\" x=\"213.5\" y=\"-389.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
@@ -506,9 +506,9 @@
        "<title>0&#45;&gt;0&#45;7</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M526.84,-524.9C544.96,-535.81 566.5,-553.2 554,-569 539.22,-587.69 471.7,-597.42 433.17,-601.54\"/>\n",
        "</g>\n",
-       "<!-- 0&#45;7&#45;&gt;2 -->\n",
+       "<!-- 0&#45;7&#45;&gt;1 -->\n",
        "<g id=\"edge14\" class=\"edge\">\n",
-       "<title>0&#45;7&#45;&gt;2</title>\n",
+       "<title>0&#45;7&#45;&gt;1</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M378.88,-602.18C345.91,-599.06 289.32,-590.76 246,-569 233.9,-562.92 234.01,-556.89 223,-549 213.39,-542.11 202.35,-535.37 192.38,-529.67\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"194.03,-526.58 183.59,-524.76 190.61,-532.69 194.03,-526.58\"/>\n",
        "<text text-anchor=\"middle\" x=\"311\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.3333333333</text>\n",
@@ -544,10 +544,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f1519dbfb90>"
+       "<graphviz.graphs.Digraph at 0x7f49806a7590>"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,24 +597,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.          1.         -0.33333333  0.          0.         -0.66666667\n",
+      "[ 0.         -0.33333333  1.          0.          0.         -0.66666667\n",
       "  0.        ] * z >=  1\n",
       "[ 0.   0.   0.  -0.5  1.  -0.5  0. ] * z >=  1\n",
-      "[ 0.  -0.5  1.   0.  -0.5  0.   0. ] * z >=  1\n",
+      "[ 0.   1.  -0.5  0.  -0.5  0.   0. ] * z >=  1\n",
       "[ 0.  0.  0.  1. -1.  0.  0.] * z >=  1\n",
-      "[ 0.66666667  0.         -0.33333333 -0.33333333  0.          0.\n",
+      "[ 0.66666667 -0.33333333  0.         -0.33333333  0.          0.\n",
       "  0.        ] * z >=  1\n",
       "[ 0.  0.  0.  0.  0.  1. -1.] * z >=  1\n",
       "\n",
       "\n",
-      "SolverResult(status=optimal, result_vector=[ 1.7 -1.4  0.   0.4 -0.6 -3.6 -4.6], value=0.0)\n"
+      "SolverResult(status=optimal, result_vector=[ 3.1  1.4  0.   1.8  0.8 -2.2 -3.2], value=0.0)\n"
      ]
     }
    ],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
      "output_type": "stream",
      "text": [
       "MEC quotient MPD EC-freeness certificate:\n",
-      "[ 1.7 -1.4  0.   0.4 -0.6 -3.6 -4.6]\n",
+      "[ 3.1  1.4  0.   1.8  0.8 -2.2 -3.2]\n",
       "\n",
       "\n",
       "MEC strongly connected certificate:\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1059,10 +1059,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f1519dbf860>"
+       "<graphviz.graphs.Digraph at 0x7f49806a7da0>"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1389,10 +1389,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f1519d278c0>"
+       "<graphviz.graphs.Digraph at 0x7f49806dd3d0>"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1625,14 +1625,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check the certificate (fwd, bwd) for MECs begin strongly connected according to Lemma 3.27\n",
+    "### Check the certificate (fwd, bwd) for MECs begin strongly connected according to lemma 3.27\n",
     "\n",
-    "The check of the certificate for MEC-decomposition quotient-MDP being EC-free proves that each state belongs to exactly one MEC. That is why we can assume $fwd, bwd$ are functions: $S \\to N$. Use only transition from EC inner actions."
+    "The check of the certificate for MEC-decomposition quotient-MDP being EC-free proves that each state belongs to exactly one MEC. Use only transitions from EC inner actions so the graph consists of unconnected MECs. Due to this restriction we can assume $fwd, bwd$ are functions: $S \\to N$ because there are no edges between MECs.\n",
+    "\n",
+    "Iterate through all edges $(u, v)$ in the constructed graph. $u$ and $v$ belong to same MEC, $(u, v)$ is the edge in this MEC. Define functions $fwd_{ok}, bwd_{ok}: S \\to \\{0, 1\\}$, init all function values with 0. Check the lemma constraints 2 and 3:\n",
+    "\n",
+    "- if $fwd(v) < fwd(u)$ then $fwd_{ok}(u) := 1$\n",
+    "- if $bwd(u) < bwd(v)$ then $bwd_{ok}(v) := 1$\n",
+    "\n",
+    "These constraints can not be fulfiled for MEC-leaders, defined in the lemma constraint 1, since  no other $fwd$ or $bwd$ value can be smaller than 0 value of the MEC-leader. So after checking all edges:\n",
+    "- for all non-leader states $s$ the following must be satisfied: $fwd_{ok}(s) = bwd_{ok}(s) = 1$;\n",
+    "- all MEC-leaders must satisfy: $fwd_{ok}(s) = bwd_{ok}(s) = 0$;\n",
+    "\n",
+    "$fwd_{ok}(s)$ and $bwd_{ok}(s)$ are the same functions so we can consider $fwd_{ok}$ as a representative of both.\n",
+    "\n",
+    "Now check the lemma constraint 1. Define $L:=\\{s \\in S | fwd_{ok}(s) = 0 \\}$ as the set of MEC-leaders retrieved from $fwd$. Per definition each MEC has exactly one leader and each MEC-leader (state) belongs to exactly one component. Henceforth the function $leaders$ must be a bijection: $L \\to C, leaders(s) := components(s)$, where $C$ is the set of MECs, $s \\in L$, $components$ is a function which assigns a MEC to each state. \n",
+    "Define $ComponentLeaderCount: C \\to N$, $ComponentLeaderCount(c)$ is the amount of $c$ entries in values of $leaders$,in other words $ComponentLeaderCount(c)$ is the amount of MEC-leaders of the MEC $c$. Each $ComponentLeaderCount(c)$ is equal 1 if and if only $leaders$ is a bijection because bijection is one-to-one correspondence between two sets.\n",
+    "\n",
+    "This check proves $fwd, bwd$ satisfy all the constraints from the lemma."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
