--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "MEC quotient-MPD EC-freeness certificate:\n",
-      "[ 3.1  1.4  0.   1.8  0.8 -2.2 -3.2]\n",
+      "[ 1.7 -1.4  0.   0.4 -0.6 -3.6 -4.6]\n",
       "\n",
       "\n",
       "MEC strongly connected certificate:\n",
@@ -58,6 +58,8 @@
     "mecs = dtmc.maximal_end_components()\n",
     "\n",
     "try:\n",
+    "    from switss.certification.mec_certificates import check_mec_certificate, generate_mec_certificate\n",
+    "\n",
     "    mec_certificate = generate_mec_certificate(dtmc, mecs)\n",
     "\n",
     "    print(\"MEC quotient-MPD EC-freeness certificate:\")\n",
@@ -83,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Components: [5 5 5 2 4 1 3 0] Proper MECs: [0 0 0 0 0 1] MECs amount: 6\n"
+      "Components: [5 5 5 1 4 2 3 0] Proper MECs: [0 0 0 0 0 1] MECs amount: 6\n"
      ]
     },
     {
@@ -155,7 +157,7 @@
        "<!-- 3 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
        "<title>3</title>\n",
-       "<ellipse fill=\"darkslategrey\" stroke=\"darkslategrey\" cx=\"272\" cy=\"-294\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"#98f5ff\" stroke=\"#98f5ff\" cx=\"272\" cy=\"-294\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"272\" y=\"-290.3\" font-family=\"Times,serif\" font-size=\"14.00\">3</text>\n",
        "</g>\n",
        "<!-- 3&#45;&gt;1 -->\n",
@@ -175,7 +177,7 @@
        "<!-- 5 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
        "<title>5</title>\n",
-       "<ellipse fill=\"#98f5ff\" stroke=\"#98f5ff\" cx=\"441\" cy=\"-202\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"darkslategrey\" stroke=\"darkslategrey\" cx=\"441\" cy=\"-202\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"441\" y=\"-198.3\" font-family=\"Times,serif\" font-size=\"14.00\">5</text>\n",
        "</g>\n",
        "<!-- 3&#45;&gt;5 -->\n",
@@ -263,10 +265,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f49805950d0>"
+       "<graphviz.graphs.Digraph at 0x7fe965eef530>"
       ]
      },
-     "execution_count": 723,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -344,8 +346,8 @@
      "text": [
       "Component members:\n",
       "Component 0 = A: [7]\n",
-      "Component 1 = B: [5]\n",
-      "Component 2 = C: [3]\n",
+      "Component 1 = B: [3]\n",
+      "Component 2 = C: [5]\n",
       "Component 3 = D: [6]\n",
       "Component 4 = E: [4]\n",
       "Component 5 = F: [0, 1, 2]\n",
@@ -353,9 +355,9 @@
       "\n",
       "Index by state action:\n",
       " (from_component, q_action = original dtmc action code) <-> q_code\n",
-      "(C, 3) <-> 0\n",
+      "(B, 3) <-> 0\n",
       "(E, 4) <-> 1\n",
-      "(B, 5) <-> 2\n",
+      "(C, 5) <-> 2\n",
       "(D, 6) <-> 3\n",
       "(A, 7) <-> 4\n",
       "(F, 8) <-> 5\n",
@@ -376,43 +378,43 @@
        " viewBox=\"0.00 0.00 566.12 704.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 700)\">\n",
        "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-700 562.12,-700 562.12,4 -4,4\"/>\n",
-       "<!-- 2 -->\n",
+       "<!-- 1 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>2</title>\n",
+       "<title>1</title>\n",
        "<ellipse fill=\"pink\" stroke=\"pink\" cx=\"27\" cy=\"-678\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27\" y=\"-674.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-674.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
        "</g>\n",
-       "<!-- 2&#45;3 -->\n",
+       "<!-- 1&#45;3 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>2&#45;3</title>\n",
+       "<title>1&#45;3</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"97,-623 43,-623 43,-587 97,-587 97,-623\"/>\n",
        "<text text-anchor=\"middle\" x=\"70\" y=\"-600.6\" font-family=\"Times,serif\" font-size=\"18.00\">3</text>\n",
        "</g>\n",
-       "<!-- 2&#45;&gt;2&#45;3 -->\n",
+       "<!-- 1&#45;&gt;1&#45;3 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>2&#45;&gt;2&#45;3</title>\n",
+       "<title>1&#45;&gt;1&#45;3</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M36.76,-660.89C43.6,-649.6 52.72,-634.53 59.68,-623.04\"/>\n",
        "</g>\n",
-       "<!-- 1 -->\n",
+       "<!-- 2 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>1</title>\n",
+       "<title>2</title>\n",
        "<ellipse fill=\"pink\" stroke=\"pink\" cx=\"163\" cy=\"-513\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"163\" y=\"-509.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
+       "<text text-anchor=\"middle\" x=\"163\" y=\"-509.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
        "</g>\n",
-       "<!-- 1&#45;5 -->\n",
+       "<!-- 2&#45;5 -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>1&#45;5</title>\n",
+       "<title>2&#45;5</title>\n",
        "<polygon fill=\"none\" stroke=\"black\" points=\"190,-458 136,-458 136,-422 190,-422 190,-458\"/>\n",
        "<text text-anchor=\"middle\" x=\"163\" y=\"-435.6\" font-family=\"Times,serif\" font-size=\"18.00\">5</text>\n",
        "</g>\n",
-       "<!-- 1&#45;&gt;1&#45;5 -->\n",
+       "<!-- 2&#45;&gt;2&#45;5 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>1&#45;&gt;1&#45;5</title>\n",
+       "<title>2&#45;&gt;2&#45;5</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M163,-494.81C163,-483.65 163,-469.16 163,-458.03\"/>\n",
        "</g>\n",
-       "<!-- 2&#45;3&#45;&gt;1 -->\n",
+       "<!-- 1&#45;3&#45;&gt;2 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>2&#45;3&#45;&gt;1</title>\n",
+       "<title>1&#45;3&#45;&gt;2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M73.79,-586.88C77.15,-575.04 83.11,-559.59 93,-549 102.91,-538.4 116.73,-530.55 129.47,-525.01\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"130.96,-528.18 138.93,-521.21 128.35,-521.69 130.96,-528.18\"/>\n",
        "<text text-anchor=\"middle\" x=\"158\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.3333333333</text>\n",
@@ -423,9 +425,9 @@
        "<ellipse fill=\"lightblue\" stroke=\"lightblue\" cx=\"92\" cy=\"-183\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"92\" y=\"-179.3\" font-family=\"Times,serif\" font-size=\"14.00\">F</text>\n",
        "</g>\n",
-       "<!-- 2&#45;3&#45;&gt;5 -->\n",
+       "<!-- 1&#45;3&#45;&gt;5 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>2&#45;3&#45;&gt;5</title>\n",
+       "<title>1&#45;3&#45;&gt;5</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M66.64,-586.82C63.4,-568.77 59,-539.5 59,-514 59,-514 59,-514 59,-274 59,-250.97 68.64,-226.54 77.5,-208.96\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.69,-210.42 82.28,-199.94 74.5,-207.14 80.69,-210.42\"/>\n",
        "<text text-anchor=\"middle\" x=\"124\" y=\"-389.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.6666666667</text>\n",
@@ -489,16 +491,16 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"180.5,-211.3 177,-201.3 173.5,-211.3 180.5,-211.3\"/>\n",
        "<text text-anchor=\"middle\" x=\"191.5\" y=\"-224.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
        "</g>\n",
-       "<!-- 1&#45;5&#45;&gt;2 -->\n",
+       "<!-- 2&#45;5&#45;&gt;1 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>1&#45;5&#45;&gt;2</title>\n",
+       "<title>2&#45;5&#45;&gt;1</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M135.98,-451.61C100.87,-467.06 41.1,-499.41 16,-549 -0.26,-581.12 8.35,-623.61 16.94,-650.63\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"13.65,-651.83 20.18,-660.18 20.28,-649.58 13.65,-651.83\"/>\n",
        "<text text-anchor=\"middle\" x=\"30.5\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
        "</g>\n",
-       "<!-- 1&#45;5&#45;&gt;4 -->\n",
+       "<!-- 2&#45;5&#45;&gt;4 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>1&#45;5&#45;&gt;4</title>\n",
+       "<title>2&#45;5&#45;&gt;4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M177.74,-421.86C182.03,-416.38 186.5,-410.13 190,-404 195.09,-395.08 199.56,-384.75 203.12,-375.47\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"206.46,-376.51 206.6,-365.92 199.88,-374.11 206.46,-376.51\"/>\n",
        "<text text-anchor=\"middle\" x=\"213.5\" y=\"-389.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.5</text>\n",
@@ -527,9 +529,9 @@
        "<title>0&#45;&gt;0&#45;7</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M526.84,-524.9C544.96,-535.81 566.5,-553.2 554,-569 539.22,-587.69 471.7,-597.42 433.17,-601.54\"/>\n",
        "</g>\n",
-       "<!-- 0&#45;7&#45;&gt;1 -->\n",
+       "<!-- 0&#45;7&#45;&gt;2 -->\n",
        "<g id=\"edge14\" class=\"edge\">\n",
-       "<title>0&#45;7&#45;&gt;1</title>\n",
+       "<title>0&#45;7&#45;&gt;2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M378.88,-602.18C345.91,-599.06 289.32,-590.76 246,-569 233.9,-562.92 234.01,-556.89 223,-549 213.39,-542.11 202.35,-535.37 192.38,-529.67\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"194.03,-526.58 183.59,-524.76 190.61,-532.69 194.03,-526.58\"/>\n",
        "<text text-anchor=\"middle\" x=\"311\" y=\"-554.6\" font-family=\"Times,serif\" font-size=\"18.00\">0.3333333333</text>\n",
@@ -565,10 +567,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f49807509e0>"
+       "<graphviz.graphs.Digraph at 0x7fe965eec590>"
       ]
      },
-     "execution_count": 725,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,24 +613,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.         -0.33333333  1.          0.          0.         -0.66666667\n",
+      "[ 0.          1.         -0.33333333  0.          0.         -0.66666667\n",
       "  0.        ] * z >=  1\n",
       "[ 0.   0.   0.  -0.5  1.  -0.5  0. ] * z >=  1\n",
-      "[ 0.   1.  -0.5  0.  -0.5  0.   0. ] * z >=  1\n",
+      "[ 0.  -0.5  1.   0.  -0.5  0.   0. ] * z >=  1\n",
       "[ 0.  0.  0.  1. -1.  0.  0.] * z >=  1\n",
-      "[ 0.66666667 -0.33333333  0.         -0.33333333  0.          0.\n",
+      "[ 0.66666667  0.         -0.33333333 -0.33333333  0.          0.\n",
       "  0.        ] * z >=  1\n",
       "[ 0.  0.  0.  0.  0.  1. -1.] * z >=  1\n",
       "\n",
       "\n",
-      "SolverResult(status=optimal, result_vector=[ 3.1  1.4  0.   1.8  0.8 -2.2 -3.2], value=0.0)\n",
+      "SolverResult(status=optimal, result_vector=[ 1.7 -1.4  0.   0.4 -0.6 -3.6 -4.6], value=0.0)\n",
       "Multiply system Matrix with the certificate: \n",
       "[[1.]\n",
       " [1.]\n",
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 727,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +704,7 @@
     }
    ],
    "source": [
-    "vertex_count = mdp.P.shape[1]\n",
+    "vertex_count = dtmc.P.shape[1]\n",
     "\n",
     "adj = {}  # adjacency list, contains only edges from inner actions\n",
     "rev_adj = {}\n",
@@ -711,10 +713,10 @@
     "    rev_adj[u] = []\n",
     "\n",
     "original_inner_action_codes = set(original_inner_action_codes)\n",
-    "for code, v_state in list(mdp.P.keys()):\n",
+    "for code, v_state in list(dtmc.P.keys()):\n",
     "    if code not in original_inner_action_codes:\n",
     "        continue\n",
-    "    u_state, action = mdp.index_by_state_action.inv[code]\n",
+    "    u_state, action = dtmc.index_by_state_action.inv[code]\n",
     "    adj[u_state].append(v_state)\n",
     "    rev_adj[v_state].append(u_state)\n",
     "\n",
@@ -730,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +823,7 @@
     }
    ],
    "source": [
-    "vertex_count = mdp.P.shape[1]\n",
+    "vertex_count = dtmc.P.shape[1]\n",
     "# check fwd, bwd are functions: S -> N\n",
     "if fwd.shape[0] != vertex_count or bwd.shape[0] != vertex_count:\n",
     "    print(\"INVALID\")\n",
@@ -832,10 +834,10 @@
     "fwd_ok = np.zeros(vertex_count, dtype=bool)\n",
     "bwd_ok = np.zeros(vertex_count, dtype=bool)\n",
     "\n",
-    "for code, v_state in list(mdp.P.keys()):\n",
+    "for code, v_state in list(dtmc.P.keys()):\n",
     "    if code not in original_inner_action_codes:\n",
     "        continue\n",
-    "    u_state, action = mdp.index_by_state_action.inv[code]\n",
+    "    u_state, action = dtmc.index_by_state_action.inv[code]\n",
     "    if fwd[v_state] < fwd[u_state]:\n",
     "        fwd_ok[u_state] = True\n",
     "    if bwd[u_state] < bwd[v_state]:\n",
@@ -865,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -912,6 +914,8 @@
     "mecs = mdp.maximal_end_components()\n",
     "\n",
     "try:\n",
+    "    from switss.certification.mec_certificates import check_mec_certificate, generate_mec_certificate\n",
+    "\n",
     "    mec_certificate = generate_mec_certificate(mdp, mecs)\n",
     "\n",
     "    print(\"MEC quotient-MPD EC-freeness certificate:\")\n",
@@ -937,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1245,10 +1249,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f4980750aa0>"
+       "<graphviz.graphs.Digraph at 0x7fe965eefce0>"
       ]
      },
-     "execution_count": 732,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1568,10 +1572,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f49805e0320>"
+       "<graphviz.graphs.Digraph at 0x7fe965eede80>"
       ]
      },
-     "execution_count": 734,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1882,16 +1886,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 4 4 1 3 1 2 0]\n",
-      "[1 1 0 0 1 0]\n",
-      "6\n"
+      "Components: [5 4 4 1 3 1 2 0] Proper MECs: [1 1 0 0 1 0] MECs amount: 6\n"
      ]
     }
    ],
@@ -1908,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1922,6 +1924,8 @@
    ],
    "source": [
     "try:\n",
+    "    from switss.certification.mec_certificates import check_mec_certificate, generate_mec_certificate\n",
+    "\n",
     "    mec_certificate = generate_mec_certificate(mdp, mecs)\n",
     "\n",
     "    print(\"MEC quotient MPD EC-freeness certificate:\")\n",
